--- a/doc/filters/sha512.md
+++ b/doc/filters/sha512.md
@@ -1,2 +1,11 @@
 sha512
 ======
+
+filter **sha512** in [Text extension](../Text.md)
+
+> Calculate the sha512 hash of a string
+
+``` twig
+{{ "hello"|sha512 }}
+{# outputs 9b71d224bd62f3785d96d46ad3ea3d73319bfbc2890caadae2dff72519673ca72323c3d99ba5c11d7c7acc6e14b8c5da0c4663475c2e5c3adef46f73bcdec043 #}
+```
